0.0.2

* Fix issue #1 in `init1`
* Rename functions to have 1 suffix.
* Implement `unsnoc`.

0.0.1

* Initial version.